syntax = "proto3";

package yomishi.config;

service Config {
  rpc FetchConfig(FetchConfigRequest) returns (FetchConfigReply) {}
  rpc PushConfig(PushConfigRequest) returns (PushConfigReply) {}

  rpc DictionaryList(DictionaryListRequest) returns (DictionaryListReply) {}
  rpc AnkiConfigData(AnkiConfigDataRequest) returns (AnkiConfigDataReply) {}
}

enum CONFIG_TYPE{
  STRING = 0;
  BOOLEAN = 1;
  INTEGER = 2;
  SERDE = 3;  
}

message FetchConfigRequest {
  CONFIG_TYPE type = 1;
  string key = 2;
}

message FetchConfigReply { string config = 1; }

message PushConfigRequest {
  CONFIG_TYPE type = 1;
  string key = 2;
  string value = 3;
}

message PushConfigReply { }

message Dictionary {
  string id = 1;
  string name = 2; // TODO: full metadata
}

message DictionaryListRequest { }

message DictionaryListReply {
  repeated Dictionary dictionaries = 1;
}

message AnkiConfigDataRequest { }

message AnkiConfigDataReply {
  repeated string decks = 1;
  repeated string models = 2;
  repeated string current_model_fields = 3;
}